@@ -16,6 +16,7 @@ openbve (1.0.2.0-0ubuntu1) unreleased; urgency=low
   * Update 'known-issues.txt'
   * Print + try...except{} around path used in LoadOptions() (debugging)
   * Pacify lintian checker
+  * Leave fullscreen before deinitialisation to reduce risk of leaving a mess
 
  -- Paul Sladen <ubuntu@paul.sladen.org>  Sun, 05 Apr 2009 12:33:10 +0000
 
